# memoize

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: assets.rs  core.rs  git.rs  main.rs  markdown.rs  parallel.rs  serve.rs  watch.rs
src/markdown/: add_ids.rs  mod.rs  rel_links.rs  toc.rs
templates/: livereload.js  note.html  style.css
