[package]
name = "knot2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
minijinja = { version = "2.12", features = ["loader"] }
pulldown-cmark = "0.13.0"
walkdir = "2"
argh = "0.1"

# For the server.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.0"
