[package]
name = "knot2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
minijinja = { version = "2.12", features = ["loader"] }
pulldown-cmark = "0.13.0"
walkdir = "2"
argh = "0.1"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"

# For the server.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
tokio-util = { version = "0.7", features = ["io"] }
axum-extra = { version = "0.12", features = ["async-read-body"] }
mime_guess = { version = "2", default-features = false }

# For watching & livereload.
notify = "8"
tokio-stream = { version = "0.1", features = ["sync"] }
